--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -53,11 +53,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApplicationUser.cs" />
+    <Compile Include="Configuration.cs" />
+    <Compile Include="User.cs" />
     <Compile Include="BaseEntity.cs" />
     <Compile Include="DataContext.cs" />
     <Compile Include="Product.cs" />
-    <Compile Include="User.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Contact.cs" />
     <Compile Include="Entity.cs" />
@@ -67,7 +67,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
