--- a/Domain/App.config
+++ b/Domain/App.config
@@ -11,4 +11,17 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <!-- <add name="DBConnection" connectionString="data source=(localdb)\MSSQLLocalDB;Initial Catalog=SalesProd;Integrated Security=True;"
+          providerName="System.Data.SqlClient"/> -->
+
+     <add name="DBConnection" connectionString="Data Source=.\SQLEXPRESS;
+         Initial Catalog=SalesProd;
+         Integrated Security=True;
+         Connect Timeout=30;
+         User Instance=True"
+         providerName="System.Data.SqlClient"/>
+    
+    
+  </connectionStrings>
 </configuration>
