--- a/Domain/App.config
+++ b/Domain/App.config
@@ -2,25 +2,23 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework"
-      type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-      requirePermission="false"/>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <entityFramework>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!-- <add name="DBConnection" connectionString="data source=(localdb)\MSSQLLocalDB;Initial Catalog=SalesProd;Integrated Security=True;"
-          providerName="System.Data.SqlClient"/> -->
-
-     <add name="DBConnection" connectionString="Data Source=.\SQLEXPRESS;
-         Initial Catalog=SalesProd;
+    <!--<add name="DBConnection" connectionString="data source=(localdb)\SQLEXPRESS;Initial Catalog=my;Trusted_Connection=True;Authentication=Windows Authentication"
+          providerName="System.Data.SqlClient"/>-->
+    <!--<add name="DBConnection" connectionString="Data Source=.\SQLEXPRESS;
+         Initial Catalog=my;
          Integrated Security=True;
          Connect Timeout=30;
          User Instance=True"
-         providerName="System.Data.SqlClient"/>
-      
+         providerName="System.Data.SqlClient"/>-->
+    <add name="ABC" connectionString="Data Source=DROGON\SQLEXPRESS;Integrated Security=True;     Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;     ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+    <add name="DataModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Domain.DataModel;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
