--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -98,6 +98,7 @@
     <Compile Include="IBaseEntity.cs" />
     <Compile Include="IEntity.cs" />
     <Compile Include="Repository\GenericRepository.cs" />
+    <Compile Include="Repository\IEntityRepos.cs" />
     <Compile Include="Repository\IGenericRepository.cs" />
     <Compile Include="Sale.cs">
       <DependentUpon>DataModel.tt</DependentUpon>
