Some changes + Exceptions start

--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -78,6 +78,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Exception\ExceptionUtility.cs" />
+    <Compile Include="Exception\MessageUtility.cs" />
     <Compile Include="Mapper\Mapping.cs" />
     <Compile Include="Migrations\202001031052120_SampleMigrations.cs" />
     <Compile Include="Migrations\202001031052120_SampleMigrations.designer.cs">
