--- a/Task_4/App.config
+++ b/Task_4/App.config
@@ -14,4 +14,7 @@
             <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
         </providers>
     </entityFramework>
+  <connectionStrings>
+      <add name="SalesEntities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DROGON\SQLEXPRESS;initial catalog=Sales;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
