--- a/Domain/BLL.csproj
+++ b/Domain/BLL.csproj
@@ -153,9 +153,9 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Models\Models.csproj">
+    <ProjectReference Include="..\Models\DAL.csproj">
       <Project>{54630f6c-6393-4f0f-a8b2-2105408ac742}</Project>
-      <Name>Models</Name>
+      <Name>DAL</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
