--- a/Migrations/Migrations.csproj
+++ b/Migrations/Migrations.csproj
@@ -81,9 +81,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Domain\Domain.csproj">
+    <ProjectReference Include="..\Domain\BLL.csproj">
       <Project>{d0f743f0-ed5e-4138-a3a1-7b21f0cb0b9f}</Project>
-      <Name>Domain</Name>
+      <Name>BLL</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
