--- a/Task_4/Task_4.csproj
+++ b/Task_4/Task_4.csproj
@@ -62,17 +62,17 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Domain\Domain.csproj">
+    <ProjectReference Include="..\Domain\BLL.csproj">
       <Project>{d0f743f0-ed5e-4138-a3a1-7b21f0cb0b9f}</Project>
-      <Name>Domain</Name>
+      <Name>BLL</Name>
     </ProjectReference>
     <ProjectReference Include="..\Migrations\Migrations.csproj">
       <Project>{91edaac8-3844-4804-b88a-47b6272cc12a}</Project>
       <Name>Migrations</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Models\Models.csproj">
+    <ProjectReference Include="..\Models\DAL.csproj">
       <Project>{54630f6c-6393-4f0f-a8b2-2105408ac742}</Project>
-      <Name>Models</Name>
+      <Name>DAL</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
