--- a/Domain/BLL.csproj
+++ b/Domain/BLL.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{D0F743F0-ED5E-4138-A3A1-7B21F0CB0B9F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Domain</RootNamespace>
-    <AssemblyName>Domain</AssemblyName>
+    <RootNamespace>BLL</RootNamespace>
+    <AssemblyName>BLL</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -115,6 +115,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sales.cs" />
+    <Compile Include="Services\SalesService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
