--- a/Domain/BLL.csproj
+++ b/Domain/BLL.csproj
@@ -79,7 +79,8 @@
       <DependentUpon>DataModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="Exception\MessageUtility.cs" />
-    <Compile Include="Mapper\Mapping.cs" />
+    <Compile Include="Mapper\Facade.cs" />
+    <Compile Include="Mapper\SetupMapping.cs" />
     <Compile Include="Migrations\202001031052120_SampleMigrations.cs" />
     <Compile Include="Migrations\202001031052120_SampleMigrations.designer.cs">
       <DependentUpon>202001031052120_SampleMigrations.cs</DependentUpon>
@@ -115,6 +116,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sales.cs" />
+    <Compile Include="Services\Sale.cs" />
     <Compile Include="Services\SalesService.cs" />
   </ItemGroup>
   <ItemGroup>
