--- a/Domain/BLL.csproj
+++ b/Domain/BLL.csproj
@@ -116,7 +116,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sales.cs" />
-    <Compile Include="Services\Sale.cs" />
+    <Compile Include="Services\SaleService.cs" />
     <Compile Include="Services\SalesService.cs" />
   </ItemGroup>
   <ItemGroup>
