--- a/Domain/BLL.csproj
+++ b/Domain/BLL.csproj
@@ -77,6 +77,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Data\Sale.cs" />
     <Compile Include="Data\Sales.cs" />
+    <Compile Include="Services\ContactService.cs" />
+    <Compile Include="Services\IService.cs" />
     <Compile Include="Services\SaleService.cs" />
     <Compile Include="Services\SalesService.cs" />
   </ItemGroup>
