--- a/Domain/BLL.csproj
+++ b/Domain/BLL.csproj
@@ -65,7 +65,6 @@
   <ItemGroup>
     <Compile Include="Data\Client.cs" />
     <Compile Include="Data\Contact.cs" />
-    <Compile Include="Exception\MessageUtility.cs" />
     <Compile Include="Data\Manager.cs" />
     <Compile Include="Mapper\Facade.cs" />
     <Compile Include="Mapper\SetupMapping.cs" />
@@ -77,6 +76,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Data\Sale.cs" />
     <Compile Include="Data\Sales.cs" />
+    <Compile Include="Services\ProductService.cs" />
+    <Compile Include="Services\ClientService.cs" />
+    <Compile Include="Services\ManagerService.cs" />
     <Compile Include="Services\ContactService.cs" />
     <Compile Include="Services\IService.cs" />
     <Compile Include="Services\SaleService.cs" />
