--- a/Domain/BLL.csproj
+++ b/Domain/BLL.csproj
@@ -76,11 +76,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Data\Sale.cs" />
     <Compile Include="Data\Sales.cs" />
+    <Compile Include="Services\IService.cs" />
     <Compile Include="Services\ProductService.cs" />
     <Compile Include="Services\ClientService.cs" />
     <Compile Include="Services\ManagerService.cs" />
     <Compile Include="Services\ContactService.cs" />
-    <Compile Include="Services\IService.cs" />
+    <Compile Include="Services\IGenericService.cs" />
     <Compile Include="Services\SaleService.cs" />
     <Compile Include="Services\SalesService.cs" />
   </ItemGroup>
