--- a/Domain/App.config
+++ b/Domain/App.config
@@ -10,8 +10,9 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ABC" connectionString="Data Source=DROGON\SQLEXPRESS;Integrated Security=True;     Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;     ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+    <!--<add name="ABC" connectionString="Data Source=DROGON\SQLEXPRESS;Integrated Security=True;     Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;     ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
     <add name="DataModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Domain.DataModel;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="SalesEntities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DROGON\SQLEXPRESS;initial catalog=Sales;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  -->
   </connectionStrings>
 </configuration>
