--- a/Domain/BLL.csproj
+++ b/Domain/BLL.csproj
@@ -66,31 +66,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\Client.cs" />
-    <Compile Include="Data\Contact.cs" />
-    <Compile Include="Data\Manager.cs" />
-    <Compile Include="Mapper\Facade.cs" />
-    <Compile Include="Mapper\SetupMapping.cs" />
-    <Compile Include="Data\Base\BaseEntity.cs" />
-    <Compile Include="Data\Base\Entity.cs" />
-    <Compile Include="Data\Product.cs" />
-    <Compile Include="ParseCsv.cs" />
+    <Compile Include="Models\Client.cs" />
+    <Compile Include="Models\Contact.cs" />
+    <Compile Include="Models\Manager.cs" />
+    <Compile Include="Classes\Mapper\Facade.cs" />
+    <Compile Include="Classes\Mapper\SetupMapping.cs" />
+    <Compile Include="Models\Base\BaseEntity.cs" />
+    <Compile Include="Models\Base\Entity.cs" />
+    <Compile Include="Models\Product.cs" />
+    <Compile Include="Interfaces\Services\IGenericService.cs" />
+    <Compile Include="Interfaces\Services\IService.cs" />
+    <Compile Include="Classes\ParseCsv.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Data\Sale.cs" />
-    <Compile Include="Data\Sales.cs" />
+    <Compile Include="Models\Sale.cs" />
+    <Compile Include="Models\Sales.cs" />
     <Compile Include="Resources\Resource.Designer.cs">
       <DependentUpon>Resource.resx</DependentUpon>
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
-    <Compile Include="Services\IService.cs" />
-    <Compile Include="Services\ProductService.cs" />
-    <Compile Include="Services\ClientService.cs" />
-    <Compile Include="Services\ManagerService.cs" />
-    <Compile Include="Services\ContactService.cs" />
-    <Compile Include="Services\IGenericService.cs" />
-    <Compile Include="Services\SaleService.cs" />
-    <Compile Include="Services\SalesService.cs" />
+    <Compile Include="Classes\Services\ProductService.cs" />
+    <Compile Include="Classes\Services\ClientService.cs" />
+    <Compile Include="Classes\Services\ManagerService.cs" />
+    <Compile Include="Classes\Services\ContactService.cs" />
+    <Compile Include="Classes\Services\SaleService.cs" />
+    <Compile Include="Classes\Services\SalesService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
