--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -81,24 +81,26 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Sale.cs" />
     <Compile Include="Models\Sales.cs" />
-    <Compile Include="Resources\Resource.Designer.cs">
-      <DependentUpon>Resource.resx</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <Compile Include="Classes\Services\ProductService.cs" />
     <Compile Include="Classes\Services\ClientService.cs" />
     <Compile Include="Classes\Services\ManagerService.cs" />
     <Compile Include="Classes\Services\ContactService.cs" />
     <Compile Include="Classes\Services\SaleService.cs" />
     <Compile Include="Classes\Services\SalesService.cs" />
+    <Compile Include="Resources\Resource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
-    <None Include="Resources\28.12.2019_23-27_11" />
+    <None Include="Resources\28.12.2019_23-27.csv" />
+    <None Include="Resources\Ivanov_08012020.csv" />
+    <None Include="Resources\Ivanov_19112012.csv" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
