--- a/Task_4/App.config
+++ b/Task_4/App.config
@@ -17,4 +17,7 @@
   <connectionStrings>
       <add name="SalesEntities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DROGON\SQLEXPRESS;initial catalog=Sales;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  <appSettings>
+    <add key="file" value="..\..\Files\Ivanov_19112012.csv"/>
+  </appSettings>
 </configuration>
