--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Mapper\MappingService.cs" />
+    <Compile Include="Classes\Services\SemaphoreLocker.cs" />
     <Compile Include="Models\Client.cs" />
     <Compile Include="Models\Contact.cs" />
     <Compile Include="Models\Manager.cs" />
