--- a/Task_4/App.config
+++ b/Task_4/App.config
@@ -19,5 +19,6 @@
   </connectionStrings>
   <appSettings>
     <add key="file" value="..\..\Files\Ivanov_19112012.csv"/>
+    <add key="folder" value="..\..\Files"/>
   </appSettings>
 </configuration>
