--- a/Task_4/Task_4.csproj
+++ b/Task_4/Task_4.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Exception\MessageUtility.cs" />
+    <Compile Include="MainMethods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
